--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -267,7 +267,7 @@ img.mfp-img {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
     background: #444444; }
   .mfp-figure small {
-    color: #bdbdbd;
+    color: #4db5ff;
     display: block;
     font-size: 12px;
     line-height: 14px; }
