--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,9 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+
+
 .site-hero .overlay {
   position: absolute;
   top: 0;
@@ -108,7 +111,11 @@
   overflow: hidden;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
-  height: 100%; /* Asegura que las tarjetas tengan la misma altura */
+  height: 500%; /* Asegura que las tarjetas tengan la misma altura */
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .post-entry:hover {
@@ -117,7 +124,7 @@
 
 .post-entry img {
   width: 100%;
-  height: 250px; /* Ajusta a la altura deseada */
+  height: 300px; /* Ajusta a la altura deseada */
   object-fit: cover; /* Asegura que la imagen cubra el área sin deformarse */
 }
 
@@ -545,9 +552,8 @@ header .navbar.navbar-light .nav-link.active {
 }
 
 .site-section {
-  padding: 7em 0;
+  padding: 6em 1em;
 }
-
 #search-form .search-input {
   width: calc(100% - 160px);
   height: 55px;
@@ -1186,7 +1192,7 @@ textarea.form-control {
 }
 
 .sidebar {
-  padding-left: 5em;
+  padding-left: 1em;
 }
 
 @media (max-width: 991.98px) {
